--- a/Assignment2.rmd
+++ b/Assignment2.rmd
@@ -69,7 +69,7 @@ We did not include _Geography_ and __Binned Income__ and we were using the _Log 
 
 ### Stepwise Regression
 
-We used both __Akaike’s Information Criteria(AIC)__ and __Bayesian Information Criteria(BIC)__ in our analysis. The latter one penalises additional parameters harder. We performed forward, backward and hybrid stepwise regression. In all of the models that were generated we notice that we have groups of parameters that are similar and hence induce multicollinearity in the models. For example, we see both __Percent Married__ and __Percent Married Households__ in the models and as stepwise methods do not account for multicollinearity this causes increases in the variance of our coefficient estimates and makes the model sensitive to changes, thus reducing drastically the predictive power of the model. In order to address the issue of multicollinearity we apply Ridge and LASSO techniques which account for this.
+We used __Bayesian Information Criteria(BIC)__ in our analysis. This penalises additional parameters harder. We performed forward, backward and hybrid stepwise regression. In all of the models that were generated we notice that we have groups of parameters that are similar and hence induce multicollinearity in the models. For example, we see both __Percent Married__ and __Percent Married Households__ in the models and as stepwise methods do not account for multicollinearity this causes increases in the variance of our coefficient estimates and makes the model sensitive to changes, thus reducing drastically the predictive power of the model. In order to address the issue of multicollinearity we apply Ridge and LASSO techniques which account for this.
 
 ### RIDGE Regression
 
@@ -171,7 +171,7 @@ plot(lm(deathRate~logpctblack,data=cancer),1)
 
 ### AIC and BIC Forward and Backward Variable Selection
 
-We perform forward, backward and hybrid stepwise regression according to both AIC and BIC. We see that the models generated for AIC are all the same and the ones generated for BIC are all the same. In the AIC case we have the model has 12 parameters, whereas the BIC model has 11 variables. (See Appendix 2.2.1)
+We perform forward, backward and hybrid stepwise regression according to BIC to ensure a more parsimonious model. We see that the models generated for BIC are all the same. We see that in the BIC model has 11 variables. (See Appendix 2.2.1)
 
 ```{r stepwise, include=FALSE}
 # Below we perform stepwise regression for both AIC and BIC
@@ -180,12 +180,6 @@ cancermodel <- cancer %>% select(
   !c("Geography", "medIncome", "binnedInc", "PctBlack"))
 c0=lm(deathRate~1,cancermodel)
 cmax=lm(deathRate~.,cancermodel)
-forwardoptimalAIC = step(c0,direction="forward",
-scope=list("lower"=c0,"upper"=cmax),trace=0)
-backwardoptimalAIC = step(cmax,direction="backward",
-scope=list("lower"=c0,"upper"=cmax),trace=0)
-hybridoptimalAIC = step(c0,direction="both",
-scope=list("lower"=c0,"upper"=cmax),trace=0)
 forwardoptimalBIC = step(c0,direction="forward",
 scope=list("lower"=c0,"upper"=cmax),trace=0,k=log(3044))
 backwardoptimalBIC = step(cmax,direction="backward",
@@ -194,67 +188,16 @@ hybridoptimalBIC = step(c0,direction="both",
 scope=list("lower"=c0,"upper"=cmax),trace=0,k=log(3044))
 ```
 
-From the summary output (Appendix 2.1.1)) we see that for the AIC model all coefficients have strong evidence that they are different from zero other than Percent Unemployed 16 and Over and Percent Public Coverage. For the BIC model these variables are not in the model and further from the summary output we see with strong evidence that all the coefficients are different from zero. From observing the output we see that we would expect there to be multicollinearity in these models due to variables that measure similar or opposite quantities, for example Percent Married and Percent Married Households.
+For the model generated we see from the summary output, with strong evidence, that all the coefficients are different from zero. From observing the output we see that we would expect there to be multicollinearity in these models due to variables that measure similar or opposite quantities, for example Percent Married and Percent Married Households.
 
 ```{r summaryAICBIC, include=FALSE}
-# We compute the summaries of the stepwise models
-summary(hybridoptimalAIC)
+# We compute the summaries of the stepwise model
 summary(hybridoptimalBIC)
 ```
 
-Below we see the residual plots for the stepwise BIC model and can see in the left plot that we appear to have constant variance and the residuals have a mean of zero satisfying these assumptions. 
+We compute the Variance Inflation Factors (VIF) for the model and see that there are numerous values that are at least 5 indicating that we have multicollinearity. Specifically, we see a VIF of at least 10 in Percent Married and a VIF of 8 in Percent Married Households. As well as in log(Median Income), Percent Employed 16 and Over, Percent Employers Private Coverage and Percent Private Coverage. Due to this frequent multicollinearity between the predictors in the stepwise model this suggests that the stepwise model is not a suitable approach as multicollinearity is not taken into account and thus we proceed below with Ridge Regression and Lasso to reduce the effects of multicollinearity on the model.
 
-```{r stepwise plots,echo=FALSE,fig.asp=0.5, fig.cap="Residuals plot of Hybrid Stepwise Model using BIC"}
-plot(hybridoptimalBIC,which=1)
-```
-
-
-We compute the Variance Inflation Factors (VIF) for the BIC model and see that there are numerous values that are at least 5 indicating that we have multicollinearity. Specifically, we see a VIF of at least 10 in Percent Married and a VIF of 8 in Percent Married Households. As well as in log(Median Income), Percent Employed 16 and Over, Percent Employers Private Coverage and Percent Private Coverage. Due to this frequent multicollinearity between the predictors in the stepwise model this suggests that the stepwise model is not a suitable approach as multicollinearity is not taken into account and thus we proceed below with stepwise regression with the states where we encounter a similar problem and further to Ridge Regression and Lasso to reduce the effects of multicollinearity on the model. (See Appendix 2.2.1)
-
-```{r StepwiseVIF, include=FALSE}
-# Computing the VIF of the BIC stepwise regression model
-vif(hybridoptimalBIC)
-```
-
-Now we perform stepwise with states included as a factor and as can be seen in both the AIC and BIC case the factor State is kept in the model and otherwise the other variables included are similar with the main different exclusion being log(Percent Black) which was included in the model without the addition of the states.
-
-```{r statestepwise, include=FALSE}
-# Create stepwise regression models including the states
-cancermodel2 = separate(cancer,"Geography", into=c("County","State"),sep=",")[-c(1,4,5,16)]
-c0=lm(deathRate~1,cancermodel2)
-cmax=lm(deathRate~.,cancermodel2)
-hybridoptimalAIC2 = step(c0,direction="both",
-scope=list("lower"=c0,"upper"=cmax),trace=0)
-hybridoptimalBIC2 = step(c0,direction="both",
-scope=list("lower"=c0,"upper"=cmax),trace=0,k=log(3044))
-```
-
-We see from the summary output that the majority of the coefficients are significant with the departures from this coming from the State factor variable for certain states. In the AIC model we see that Poverty Percent is not significant with a p value of 0.0628, however we see in the BIC model this variable is dropped and as Poverty Percent will have a high correlation with Percent Unemployed 16 and Over we adopt the BIC model.
-
-```{r statestepwise 2, include=FALSE}
-# Produce summary and coefficients of state stepwise regression models
-coef(hybridoptimalAIC2)
-coef(hybridoptimalBIC2)
-summary(hybridoptimalAIC2)
-summary(hybridoptimalBIC2)
-```
-
-Below we can see the residual and QQplot for the BIC model. In the residual plot on the left hand side we see constant variance and a mean of zero with the majority of points near the horizontal red line. This is similar to what we saw when we didn't include the states in the selection process. Similarly, we see in the QQplot the majority of points on or near the reference line suggesting that the errors are indeed normally distributed, again as we see in the above case of not including states in the selection process.
-
-```{r statestepwise 3, echo=FALSE, fig.asp=0.5, fig.cap="Residuals plot and QQ plot of hybrid stepwise model with states using BIC"}
-# Residual plots of state stepwise regression
-par(mfrow=c(1,2))
-plot(hybridoptimalBIC2, which=c(1,2))
-```
-
-In order to test whether the addition of states in the model makes a significant difference on the model in the stepwise selection process we perform an F-Test using the anova function. Computing this we get a p-value of less than $2.2x10^-16$, thus giving us strong evidence that we should reject the null hypothesis that the model not including states is better. Hence, the BIC model including the states as a factor variable is a better fit of the data according to the anova function.
-
-```{r statestepwise 4, include=FALSE}
-# Perform F-Test on the BIC models above
-anova(hybridoptimalBIC,hybridoptimalBIC2)
-```
-
-To complete the section on stepwise regression we perform leave one out cross validation (in order to compute the $R^2$ of the stepwise models and also the Root Mean Squared Error (See Appendix 2.2.1). This allows us to compare these models with the Ridge and Lasso models we generate in the enxt sections. Performing this we see the AIC has an $R^2$ value of 0.4631, whereas in the BIC model we have an $R^2$ value of 0.4623.
+To complete the section on stepwise regression we perform leave one out cross validation (in order to compute the $R^2$ of the stepwise models and also the Root Mean Squared Error (See Appendix 2.2.1). This allows us to compare these models with the Ridge and Lasso models we generate in the enxt sections. Performing this we see in the stepwise model we have an $R^2$ value of 0.4623.
 
 ```{r LOOCVforStepwise, cache=TRUE, include=FALSE}
 library(caret)
@@ -267,7 +210,6 @@ loocv <- function(lm1, data=cancer) {
   model <- train(fmla, data = data, method = "lm", trControl = ctrl)
   return(model)
 }
-hybridoptimalAIC.loocv <- loocv(hybridoptimalAIC, data=cancermodel)
 hybridoptimalBIC.loocv <- loocv(hybridoptimalBIC,data=cancermodel)
 ```
 
@@ -613,18 +555,17 @@ plot(lm(deathRate~logpctblack,data=cancer),1)
 2.2.1 AIC and BIC Forward and Backward Variable Selection
 
 ```{r stepwise A, eval=FALSE}
-# Below we perform stepwise regression for both AIC
-# We alsp performed similar regression for BIC
+# We perform stepwise regression for BIC
 cancermodel <- cancer %>% select(
   !c("Geography", "medIncome", "binnedInc", "PctBlack"))
 c0=lm(deathRate~1,cancermodel)
 cmax=lm(deathRate~.,cancermodel)
-forwardoptimalAIC = step(c0,direction="forward",
-scope=list("lower"=c0,"upper"=cmax),trace=0)
-backwardoptimalAIC = step(cmax,direction="backward",
-scope=list("lower"=c0,"upper"=cmax),trace=0)
-hybridoptimalAIC = step(c0,direction="both",
-scope=list("lower"=c0,"upper"=cmax),trace=0)
+forwardoptimalBIC = step(c0,direction="forward",
+scope=list("lower"=c0,"upper"=cmax),trace=0,k=log(3044))
+backwardoptimalBIC = step(cmax,direction="backward",
+scope=list("lower"=c0,"upper"=cmax),trace=0,k=log(3044))
+hybridoptimalBIC = step(c0,direction="both",
+scope=list("lower"=c0,"upper"=cmax),trace=0,k=log(3044))
 ```
 
 ```{r summaryAICBIC A, eval = FALSE }
@@ -633,19 +574,9 @@ summary(hybridoptimalBIC)
 coef(hybridoptimalBIC)
 ```
 
-```{r stepwise plots A,eval=FALSE,fig.asp=0.5, fig.cap="Residuals plot of Hybrid Stepwise Model using BIC"}
-# An example code for residuals plot
-plot(hybridoptimalBIC,which=1)
-```
-
 ```{r StepwiseVIF A, eval=TRUE}
 # Computing the VIF of the BIC stepwise regression model
 vif(hybridoptimalBIC)
-```
-
-```{r statestepwise 4 A, include=FALSE}
-# Perform F-Test on the BIC models above
-anova(hybridoptimalBIC,hybridoptimalBIC2)
 ```
 
 ```{r LOOCVforStepwise A, cache=TRUE, eval=FALSE}
@@ -659,7 +590,6 @@ loocv <- function(lm1, data=cancer) {
   model <- train(fmla, data = data, method = "lm", trControl = ctrl)
   return(model)
 }
-hybridoptimalAIC.loocv <- loocv(hybridoptimalAIC, data=cancermodel)
 hybridoptimalBIC.loocv <- loocv(hybridoptimalBIC,data=cancermodel)
 ```
 
